@@ -1,3 +1,7 @@
+2011-09-07  0.33  H.Merijn Brand
+
+    * NAME / DISTNAME in Makefile.PL
+
 2011-09-07  0.32  H.Merijn Brand
 
     * TYPE should be numeric
